--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,14 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title> <%= t "global.program_name" %> | <%= @title %></title>
+  <title> <%= t "global.program_name" %> <% if @title.blank? %><% else %>| <%= @title %><% end %></title>
 
   <%= stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes', 'ddtabmenu', :cache => "base" %>
-  <%= javascript_include_tag 'application' %>
-
-  <script type="text/javascript">
-    ddtabmenu.definemenu("ddtabs1", 0) //initialize Tab Menu #1 with 1st tab selected
-  </script>
+  <%= javascript_include_tag :defaults %>
+<script type="text/javascript">
+//SYNTAX: ddtabmenu.definemenu("tab_menu_id", integer OR "auto")
+ddtabmenu.definemenu("ddtabs1", 0) //initialize Tab Menu with ID "ddtabs1" and select 1st tab by default
+</script>
 </head>
 <body>
 <div id="header">
