--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,38 +1,62 @@
 <h1><%= t "user.t_new_user" %></h1>
 <!--mytodo fix form to formtastic format-->
 <div id="top_float_right">
-  <%= link_to(image_tag("close.png", :title=> (t "global.close"), :align => "bottom", :hspace => "2"), users_path)%><%= link_to (t "global.close"), users_path %>
+  <%= link_to(image_tag("close.png", :title=> (t "global.close"), :align => "bottom", :hspace => "2"), users_path) %><%= link_to (t "global.close"), users_path %>
 </div>
-<% semantic_form_for(@user) do |f| %>
-    <% f.inputs do %>
-    <%= f.input :username , :label => (t "user.username") %>
-    <%= f.input :name , :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
-    <%= f.input :password, :required => true %>
-   <%= f.input :password_confirmation, :label => (t "user.password_confirmation"), :required => true %>
-   <%= f.input :email, :label => (t "global.email") %>
-   <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
-   <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
-   <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
-   <%= f.input :zip, :input_html => {:size => 30}, :label =>( t"global.zip") %>
-   <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
-   <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
-   <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
-        <% if permitted_to? :destroy, @user %>
-   <%= f.input :roles, :as => :check_boxes, :collection => User::ROLES,:label => (t "global.role")  %>
-         <% end %>
 
-     <%= f.buttons %>
+<div id="ddtabs1" class="basictab">
+  <ul>
+    <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
 
+    <% if permitted_to? :destroy, @user %>
+    <li><a href="#<%= t "users.tab.user_type_url" %>" rel="sc2"><%= (t "users.tab.user_type") %></a></li>
+        <% end %>
+  </ul>
+</div>
 
-<p>
-      <% if current_user == nil %>
-      <%= hidden_field_tag "user[created_by]", @user.username %>
-          <% else %>
-      <%= hidden_field_tag "user[created_by]", current_user.username %>
+<div class="tabcontainer">
+
+  <div id="sc1" class="tabcontent">
+    <% semantic_form_for(@user) do |f| %>
+        <% f.inputs do %>
+            <%= f.input :username, :label => (t "user.username") %>
+            <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
+            <%= f.input :password, :required => true %>
+            <%= f.input :password_confirmation, :label => (t "user.password_confirmation"), :required => true %>
+            <%= f.input :email, :label => (t "global.email") %>
+            <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
+            <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
+            <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
+            <%= f.input :zip, :input_html => {:size => 30}, :label =>(t "global.zip") %>
+            <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
+            <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
+            <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
+            <%= f.buttons %>
+
+            <% if current_user == nil %>
+                <%= hidden_field_tag "user[created_by]", @user.username %>
+            <% else %>
+                <%= hidden_field_tag "user[created_by]", current_user.username %>
+            <% end %>
+
+        <% end %>
+    <% end %>
+    </div>
+    <% if permitted_to? :destroy, @user %>
+        <div id="sc2" class="tabcontent">
+          <% semantic_form_for(@user) do |f| %>
+              <% f.inputs do %>
+                  <%= f.input :roles, :as => :check_boxes, :collection => User::ROLES, :label => (t "global.role") %>
+              <% end %>
+
+              <%= f.buttons %>
+              <% if current_user == nil %>
+                  <%= hidden_field_tag "user[created_by]", @user.username %>
+              <% else %>
+                  <%= hidden_field_tag "user[created_by]", current_user.username %>
+              <% end %>
+
           <% end %>
-    </p>
-  <p>
-
-  </p>
-<% end %>
-<% end %>
+        </div>
+    <% end %>
+  </div>
