--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -90,7 +90,7 @@ h6 {
 }
 
 #flash_error {
-  background-color: #FCC;
+  background: url(/images/exclamation.png) 8px 5px no-repeat #FCC;
   border: solid 2px #C66;
 }
 
