--- a/public/stylesheets/ddtabmenu.css
+++ b/public/stylesheets/ddtabmenu.css
@@ -1,53 +1,50 @@
-.basictab ul{
-margin: 0 0 0 0;
-padding: 10px 0;
-font-weight:bold;
-list-style-type: none;
-text-align: left; /*set to left, center, or right to align the menu as desired*/
-
-
-}
-
-.basictab li{
-display: inline;
-    padding-top:1px;
-
+.basictab ul {
+    margin: 0 0 0 0;
+    padding: 10px 0;
+    font-weight: bold;
+    list-style-type: none;
+    text-align: left; /*set to left, center, or right to align the menu as desired*/
 
 }
 
-.basictab li a{
-text-decoration: none;
-padding: 11px 7px;
-border-bottom: none;
-background-color: #4B7399;
-color: #ffffff;
-    border-left:1px solid #999999;
-    border-right:1px solid #999999;
-    border-top:1px solid #999999;
-    border-bottom:#edf2f6;
-}
-
-.basictab li a:visited{
+.basictab li {
+    display: inline;
+    padding-top: 1px;
 
 }
 
-.basictab li a:hover, .basictab li a.current{
-background-color: #edf2f6;
-color: black;
+.basictab li a {
+    text-decoration: none;
+    padding: 11px 7px;
+    border-bottom: none;
+    background-color: #4B7399;
+    color: #ffffff;
+    border-left: 1px solid #999999;
+    border-right: 1px solid #999999;
+    border-top: 1px solid #999999;
+    border-bottom: #edf2f6;
 }
 
-.basictab li a:active{
-color: black;
-    
+.basictab li a:visited {
+
 }
 
-.tabcontainer{
-background-color: #edf2f6;
-/*border: 1px solid #0066cc;*/
+.basictab li a:hover, .basictab li a.current {
+    background-color: #edf2f6;
+    color: black;
 }
 
-.tabcontent{
-    padding-top:10px;
-    border:1px solid #999999;
-display:none;
+.basictab li a:active {
+    color: black;
+
+}
+
+.tabcontainer {
+    background-color: #edf2f6; /*border: 1px solid #0066cc;*/
+}
+
+.tabcontent {
+    padding-top: 10px;
+    border: 1px solid #999999;
+    display: none;
 }
