--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,5 @@
 <h1><%= t "products.t_add_new" %></h1>
-<script type="text/javascript">
-ddtabmenu.definemenu("ddtabs1", 0) //initialize Tab Menu with ID "ddtabs1" and select 1st tab by default
-</script>
+
 <div id="top_float_right">
   <%= link_to(image_tag('close.png', :title => [t "global.close"]), products_path) %>&nbsp;<%= link_to([t "global.close"], products_path) %>
 </div>
@@ -20,19 +18,19 @@ ddtabmenu.definemenu("ddtabs1", 0) //initialize Tab Menu with ID "ddtabs1" and s
 <div id="sc1" class="tabcontent">
 <% semantic_form_for @product do |f| %>
   <% f.inputs do %>
-                <%= f.input :our_sku, :input_html => {:size => 20} %>
-                <%= f.input :description, :hint => (t "products.hint_desc") %>
-                <%= f.input :model %>
-                <%= f.input :manufacturer %>
+                <%= f.input :our_sku, :label => (t "products.our_sku"), :hint => (t "products.hint.our_sku"), :input_html => {:size => 20} %>
+                <%= f.input :description, :label => (t "global.description"), :hint => (t "products.hint_desc") %>
+                <%= f.input :model, :label => (t "products.model"), :hint => (t "products.hint_model") %>
+                <%= f.input :manufacturer, :label => (t "products.manufacturer"), :hint => (t "products.hint_manuf") %>
           <li class="string required">
-            <%= f.label :product_category_id%>
+            <%= f.label (t "products.category")%>
             <%= text_field_with_auto_complete :product, :category_name, { :size => 15}, { :url => formatted_product_categories_path(:js), :method => :get, :with => "'search=' + element.value"} %>
-
+            <p class="inline-hints"><%= (t "products.hint.category")  %></p>
           </li>
-                <%= f.input :supplier, :label_method => :company_name %>
-                <%= f.input :supplier_sku, :input_html => {:size => 20} %>
-                <%= f.input :cost_price, :input_html => {:size => 10} %>
-                <%= f.input :sell_price, :input_html => {:size => 10} %>
+                <%= f.input :supplier, :label => (t "products.supplier")%>
+                <%= f.input :supplier_sku,:hint => (t "products.hint.our_sku"), :input_html => {:size => 20} %>
+                <%= f.input :cost_price, :label =>(t "products.cost_price"), :input_html => {:size => 10} %>
+                <%= f.input :sell_price, :label =>(t "products.sell_price"),:input_html => {:size => 10} %>
                 <%= f.input :created_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
                 <%= f.input :created_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
             <% end %>
@@ -43,12 +41,12 @@ ddtabmenu.definemenu("ddtabs1", 0) //initialize Tab Menu with ID "ddtabs1" and s
 <div id="sc2" class="tabcontent">
 <% semantic_form_for @product do |f| %>
             <% f.inputs do %>
-                <%= f.input :stocked_product, :hint => (t "products.stocked") %>
-                <%= f.input :stocking_qty, :input_html => {:size => 20} %>
-                <%= f.input :qty_on_hand, :input_html => {:size => 20} %>
-                <%= f.input :qty_allocated, :input_html => {:size => 20} %>
-                <%= f.input :qty_available, :input_html => {:size => 20} %>
-                <%= f.input :qty_ordered, :input_html => {:size => 20} %>
+                <%= f.input :stocked_product,:label =>(t "products.stocked")%>
+                <%= f.input :stocking_qty, :label =>(t "products.stocking_qty"), :hint => (t "products.hint.stocking_qty"),:input_html => {:size => 20} %>
+                <%= f.input :qty_on_hand, :label =>(t "products.qoh"), :input_html => {:size => 20} %>
+                <%= f.input :qty_allocated, :label =>(t "products.allocated"), :input_html => {:size => 20} %>
+                <%= f.input :qty_available, :label =>(t "products.available"), :input_html => {:size => 20} %>
+                <%= f.input :qty_ordered, :label =>(t "products.ordered"), :input_html => {:size => 20} %>
             <% end %>
            <%= f.buttons %>
         <% end %>
@@ -57,11 +55,11 @@ ddtabmenu.definemenu("ddtabs1", 0) //initialize Tab Menu with ID "ddtabs1" and s
 <div id="sc3" class="tabcontent">
 <% semantic_form_for @product do |f| %>
             <% f.inputs do %>
-                <%= f.input :taxable %>
-                <%= f.input :tax_rate, :hint => (t "products.hint_tax_rate") %>
-                <%= f.input :discountable %>
-                <%= f.input :disc_amount, :input_html => {:size => 5} %>
-                <%= f.input :disc_percent, :input_html => {:size => 5} %>
+                <%= f.input :taxable, :label =>(t "product.taxable") %>
+                <%= f.input :tax_rate, :label =>(t "products.tax_rate"), :hint => (t "products.hint_tax_rate") %>
+                <%= f.input :discountable, :label =>(t "products.discountable") %>
+                <%= f.input :disc_amount, :label =>(t "products.disc_amount"), :input_html => {:size => 5} %>
+                <%= f.input :disc_percent,:label =>(t "products.disc_percent"), :input_html => {:size => 5} %>
             <% end %>
       <%= f.buttons %>
         <% end %>
@@ -69,9 +67,9 @@ ddtabmenu.definemenu("ddtabs1", 0) //initialize Tab Menu with ID "ddtabs1" and s
 <div id="sc4" class="tabcontent">
 <% semantic_form_for @product do |f| %>
             <% f.inputs do %>
-                <%= f.input :warranty_info, :as => :text, :input_html => {:rows => 15} %>
-                <%= f.input :warranty_length, :input_html => {:size => 20} %>
-                <%= f.input :warranty_unit, :as => :select, :collection => [(t "global.days"), (t "global.months"), (t "global.years")] %>
+                <%= f.input :warranty_info, :as => :text, :input_html => {:rows => 15},:label =>(t "products.warranty_info") %>
+                <%= f.input :warranty_length, :input_html => {:size => 20}, :label =>(t "products.warranty_length") %>
+                <%= f.input :warranty_unit, :as => :select, :collection => [(t "global.days"), (t "global.months"), (t "global.years")],:label =>(t "products.warranty_units") %>
             <% end %>
       <%= f.buttons %>
         <% end %>
