--- a/public/stylesheets/ddtabmenu.css
+++ b/public/stylesheets/ddtabmenu.css
@@ -40,7 +40,8 @@
 }
 
 .tabcontainer {
-    background-color: #edf2f6; /*border: 1px solid #0066cc;*/
+    background-color: #edf2f6;
+
 }
 
 .tabcontent {
