--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,12 @@
 
   <%= stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes', 'ddtabmenu', :cache => "base" %>
   <%= javascript_include_tag :defaults %>
+  <script type="text/javascript">
+ddtabmenu.definemenu("ddtabs1", 0) //initialize Tab Menu with ID "ddtabs1" and select 1st tab by default
 
+</script>
 </head>
-<body>
+<body >
 <div id="header">
   <%= image_tag 'logo.png', :height => 60 %>
 </div>
