--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -6,7 +6,8 @@
 
 <div id="ddtabs1" class="basictab">
 <ul>
-<li><a href="#<%= t "products.tab_menu_basic_name"  %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
+<li><a href="#<%= t "supplier.tab.basic"  %>" rel="sc1"><%= (t "supplier.tab.basic") %></a></li>
+<li><a href="#<%= t "supplier.tab.other"  %>" rel="sc2"><%= (t "supplier.tab.other") %></a></li>
 </ul>
 </div>
 
@@ -25,10 +26,18 @@
                 <%= f.input :phone, :label => (t "global.phone"), :input_html => {:size => 25} %>
                 <%= f.input :fax, :label => (t "global.fax"), :input_html => {:size => 25} %>
                 <%= f.input :email, :label => (t "global.email"), :input_html => {:size => 50} %>
+                <%= f.input :notes, :label => (t "global.notes"), :input_html => {:rows => 10} %>
+                <%= f.input :created_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
+                <%= f.input :created_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
+            <% end %>
+        <%= f.buttons %>
+  <% end %>
+    </div><div id="sc2" class="tabcontent">
+<% semantic_form_for @supplier do |f| %>
+              <% f.inputs do %>
                 <%= f.input :credit_terms, :label => (t "supplier.credit_terms"), :input_html => {:size => 30} %>
                 <%= f.input :credit_amount, :label => (t "supplier.credit_amount"), :input_html => {:size => 30} %>
                 <%= f.input :parts_leadtime_days, :label => (t "supplier.leadtime"), :input_html => {:size => 5} %>
-                <%= f.input :notes, :label => (t "global.notes"), :input_html => {:rows => 10} %>
                 <%= f.input :created_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
                 <%= f.input :created_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
             <% end %>
