--- a/public/stylesheets/ddtabmenu.css
+++ b/public/stylesheets/ddtabmenu.css
@@ -1,21 +1,20 @@
 .basictab ul {
-    margin: 0 0 0 0;
-    padding: 10px 0;
+    margin: 0;
+    padding: 7px 0 21px;
     font-weight: bold;
     list-style-type: none;
     text-align: left; /*set to left, center, or right to align the menu as desired*/
 
 }
-
-.basictab li {
-    display: inline;
-    padding-top: 1px;
-
+.basictab ul li{
+position: relative;
+display: inline;
+float: left;
 }
 
 .basictab li a {
     text-decoration: none;
-    padding: 11px 7px;
+    padding: 8px 10px;
     border-bottom: none;
     background-color: #4B7399;
     color: #ffffff;
