--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -21,7 +21,7 @@
                 <%= f.input :active, :label => (t "global.active")%>
                 <%= f.input :our_sku, :input_html => {:size => 20}, :label => (t "products.our_sku") %>
                 <%= f.input :description, :hint => (t "products.hint_desc"), :label => (t "global.description") %>
-                <%= f.input :model, :label => (t "producst.model") %>
+                <%= f.input :model, :label => (t "products.model") %>
                 <%= f.input :manufacturer, :label => (t "products.manufacturer") %>
                 <li class="string required">
                     <%= f.label :product_category_id%>
