--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -27,7 +27,7 @@
             <%= text_field_with_auto_complete :product, :category_name, { :size => 15}, { :url => formatted_product_categories_path(:js), :method => :get, :with => "'search=' + element.value"} %>
             <p class="inline-hints"><%= (t "products.hint.category")  %></p>
           </li>
-                <%= f.input :supplier, :label => (t "products.supplier")%>
+                <%= f.input :supplier, :label_method => :company_name, :label => (t "products.supplier")%>
                 <%= f.input :supplier_sku,:hint => (t "products.hint.our_sku"), :input_html => {:size => 20} %>
                 <%= f.input :cost_price, :label =>(t "products.cost_price"), :input_html => {:size => 10} %>
                 <%= f.input :sell_price, :label =>(t "products.sell_price"),:input_html => {:size => 10} %>
