--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,13 @@
 <% if current_user.roles_mask < @user.roles_mask or current_user.id == @user.id %>
     <h1><%= (t "user_t_edit_user") %></h1>
     <%= render :partial => 'actions' %>
+ <div id="show_view">
 <% semantic_form_for(@user) do |f| %>
     <% f.inputs do %>
     <%= f.input :username , :label => (t "user.username") %>
     <%= f.input :name , :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
-    <%= f.input :password, :required => true , :label => (t "user.password") %>
-   <%= f.input :password_confirmation, :label => (t "user.password_confirmation"), :required => true %>
+    <%= f.input :password,:input_html => {:autocomplete => 'off'}, :required => true , :label => (t "user.password") %>
+   <%= f.input :password_confirmation, :input_html => {:autocomplete => 'off'}, :label => (t "user.password_confirmation"), :required => true %>
    <%= f.input :email, :label => (t "global.email") %>
    <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
    <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
@@ -35,3 +36,4 @@
 <% end %>
 <% end %>
 <% end %>
+</div>
