--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -25,9 +25,11 @@
     <td><%=h supplier.contact_name %></td>
     <td><%=h supplier.contact_phone %></td>
     <td><%=h supplier.active %></td>    
-    <td><% if permitted_to? :show, Supplier.new %><%= link_to(image_tag('view.png', :title => [t "global.view"]), supplier )%> <% end %>
-       <% if permitted_to? :edit, Supplier.new %> <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_supplier_path(supplier)) %>   <% end %>
+    <td width="80">
+        <% if permitted_to? :show, Supplier.new %><%= link_to(image_tag('view.png', :title => [t "global.view"]), supplier )%> <% end %>
+        <% if permitted_to? :edit, Supplier.new %> <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_supplier_path(supplier)) %>   <% end %>
         <% if permitted_to? :destroy, Supplier.new %><%= link_to(image_tag('delete.png', :title => [t "global.delete"]), supplier, :confirm => 'Are you sure?', :method => :delete ) %> <% end %>
+        <%= link_to(image_tag('brick_add.png', :title => [t "product.new"]), new_product_path(:supplier_selected => supplier.id) ) %>
     </td>
   </tr>
 <% end %>
