Added a todo reminder.....

--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -29,7 +29,8 @@
         <% if permitted_to? :show, Supplier.new %><%= link_to(image_tag('view.png', :title => [t "global.view"]), supplier )%> <% end %>
         <% if permitted_to? :edit, Supplier.new %> <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_supplier_path(supplier)) %>   <% end %>
         <% if permitted_to? :destroy, Supplier.new %><%= link_to(image_tag('delete.png', :title => [t "global.delete"]), supplier, :confirm => 'Are you sure?', :method => :delete ) %> <% end %>
-        <%= link_to(image_tag('brick_add.png', :title => [t "product.new"]), new_product_path(:supplier_selected => supplier.id) ) %>
+      <!--myTODO - fill in the supplier automatically for products that are generated from this page only-->
+      <%= link_to(image_tag('brick_add.png', :title => [t "product.new"]), new_product_path(:supplier_selected => supplier.id) ) %>
     </td>
   </tr>
 <% end %>
