--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 <h1><%= t "products.t_title" %></h1>
 <div id="top_float_right">
   <% if permitted_to? :destroy, Product.new %>
-      <%= link_to(image_tag("delete.png", :title=> (t "global.delete"), :align => "bottom", :hspace => "2"), :confirm => 'Are you sure?', :action => :destroy) %><%= link_to (t "global.delete"), @product, :confirm => 'Are you sure?', :method => :delete %>&nbsp;&nbsp;
+      <%= link_to(image_tag("trash.png", :title=> (t "global.delete"), :align => "bottom", :hspace => "2"), :confirm => 'Are you sure?', :action => :destroy) %><%= link_to (t "global.delete"), @product, :confirm => 'Are you sure?', :method => :delete %>&nbsp;&nbsp;
   <% end %>
   <% if permitted_to? :edit, Product %>
       <%= link_to(image_tag("edit.png", :title=> (t "global.edit"), :align => "bottom", :hspace => "2"), edit_product_path) %><%= link_to (t "global.edit"), edit_product_path %>&nbsp;&nbsp;
@@ -10,12 +10,21 @@
   <%= link_to(image_tag("close.png", :title=> (t "global.close"), :align => "bottom", :hspace => "2"), products_path) %><%= link_to (t "global.close"), products_path %>
 </div>
 
+<div id="ddtabs1" class="basictab" >
+<ul>
+<li><a href="#<%= t "products.tab_menu_basic_name"  %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
+<li><a href="#<%= t "products.tab_menu_inventory_name" %>" rel="sc2"><%= t "products.tab_menu_inventory_name" %></a></li>
+<li><a href="#<%= t "products.tab_menu_selling_name" %>" rel="sc3"><%= t "products.tab_menu_selling" %></a></li>
+<li><a href="#<%= t "products.tab_menu_warranty_name"  %>" rel="sc4"><%= t "products.tab_menu_warranty" %></a></li>
+</ul>
+</div>
 
 <div class="tabcontainer">
-<div class="tabcontent">
-  <table width="100%">
+
+<div id="sc1" class="tabcontent">
+  <table width="60%">
     <tr>
-      <td colspan="2" align="right">
+      <td >
         <strong><%= t "products.supplier" %>:</strong>
       </td>
       <td align="left">
@@ -23,7 +32,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="2" align="right">
+      <td  >
         <strong><%= t "global.active" %></strong>
       </td>
       <td align="left">
@@ -31,7 +40,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="2" align="right">
+      <td >
         <strong><%= t "global.description" %>:</strong>
       </td>
       <td align="left">
@@ -39,7 +48,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="2" align="right">
+      <td >
         <strong><%= t "products.model" %>:</strong>
       </td>
       <td align="left">
@@ -47,7 +56,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="2" align="right">
+      <td  >
         <strong><%= t "products.cost" %>:</strong>
       </td>
       <td align="left">
@@ -55,7 +64,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="2" align="right">
+      <td  >
         <strong><%= t "products.sell" %>:</strong>
       </td>
       <td align="left">
@@ -63,7 +72,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="2" align="right">
+      <td  >
         <strong><%= t "products.sell" %>:</strong>
       </td>
       <td align="left">
@@ -75,12 +84,12 @@
   <fieldset id="collapsable">
     <table>
       <tr>
-        <td colspan="2" align="right">
+        <td  >
           <h1><%= t "products.t_log" %></h1>
         </td>
       </tr>
       <tr>
-        <td colspan="2" align="right">
+        <td  >
           <strong><%= t "supplier.date_created" %>:</strong>
         </td>
         <td align="left">
@@ -89,7 +98,7 @@
         </td>
       </tr>
       <tr>
-        <td colspan="2" align="right">
+        <td >
           <strong><%= t "global.last_updated_by" %>:</strong>
         </td>
         <td align="left">
@@ -104,5 +113,14 @@
       </tr>
     </table>
   </fieldset>
+</div>
+<div id="sc2" class="tabcontent">
+
+</div>
+<div id="sc3" class="tabcontent">
+
+</div>
+<div id="sc4" class="tabcontent">
+
 </div>
 </div>
