--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -24,11 +24,20 @@
                 <%= f.input :manufacturer, :label => (t "products.manufacturer"), :hint => (t "products.hint_manuf") %>
           <li class="string required">
             <%= f.label(t "products.category")%>
-            <%= text_field_with_auto_complete :product, :category_name, { :size => 15}, { :url => product_categories_path(:js), :method => :get, :with => "'search=' + element.value"} %>
+            <%= text_field_with_auto_complete :product, :category_name, { :size => 50}, { :url => product_categories_path(:js), :method => :get, :with => "'search=' + element.value"} %>
             <p class="inline-hints"><%= (t "products.hint.category")  %></p>
           </li>
-                <%= f.input :supplier, :label_method => :company_name, :label => (t "products.supplier") %>
-                <%= f.input :supplier_sku,:hint => (t "products.hint.our_sku"), :input_html => {:size => 20} %>
+          <% if params[:supplier_id] ||= nil %>
+            <li class="string required">
+            <%= f.label(t "products.supplier")%>
+            <%= f.text_field :supplier, :value => params[:supplier_name], :disabled => true  %>
+            <%= f.input :supplier_id, :as => :hidden, :input_html => {:value =>  params[:supplier_id]}   %>
+            </li>
+              
+              <% else %>
+          <%= f.input :supplier, :label_method => :company_name, :label => (t "products.supplier") %>
+             <% end %>
+                <%= f.input :supplier_sku, :label =>(t "products.supplier_sku"),:hint => (t "products.hint.our_sku"), :input_html => {:size => 20} %>
                 <%= f.input :cost_price, :label =>(t "products.cost_price"), :input_html => {:size => 10} %>
                 <%= f.input :sell_price, :label =>(t "products.sell_price"),:input_html => {:size => 10} %>
                 <%= f.input :created_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
