--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
 <% form_tag users_path, :method => 'get' do %>
    <p><%= t "user.search"  %>
      <%=  text_field_tag :search, params[:search]  %>
-     <%= submit_tag "Apply", :name => nil %>
+     <%= submit_tag (t "global.submit"), :name => nil %>
 
    </p>
 <% end %>
@@ -44,7 +44,7 @@
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_user_path(user) ) %>
       <% end %>
       <% if permitted_to? :destroy, User.new  %>
-        <%= link_to(image_tag('delete.png', :title => [t "global.delete"]), user, :confirm => 'Are you sure?', :method => :delete ) %>
+        <%= link_to(image_tag('trash.png', :title => [t "global.delete"]), user, :confirm => 'Are you sure?', :method => :delete ) %>
       <% end %>
           </td>
   </tr>
