--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= t "user.t_view" %></h1>
 <div id="top_float_right">
 <% if permitted_to? :destroy, User.new %>
-<%= link_to(image_tag("delete.png", :title=> (t "global.delete"),:align => "bottom", :hspace => "2"), :confirm => 'Are you sure?',  :action => :destroy )%><%= link_to (t "global.delete"), @user, :confirm => 'Are you sure?', :method => :delete %>&nbsp;&nbsp;
+<%= link_to(image_tag("trash.png", :title=> (t "global.delete"),:align => "bottom", :hspace => "2"), :confirm => 'Are you sure?',  :action => :destroy )%><%= link_to (t "global.delete"), @user, :confirm => 'Are you sure?', :method => :delete %>&nbsp;&nbsp;
 <% end %>
 <% if current_user.roles_mask < @user.roles_mask %>
 <%= link_to(image_tag("edit.png", :title=> (t "global.edit"),:align => "bottom", :hspace => "2"), edit_user_path)%><%= link_to (t "global.edit"), edit_user_path %>&nbsp;&nbsp;
